examples/test/testpolicy402.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy402
  namespace: namespace337
spec:
  podSelector:
    matchLabels:
      key46: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value47
          key12: value19
      podSelector:
        matchLabels:
          key23: value16
          key22: value19
